--- a/requirements/requirements-rtd.txt
+++ b/requirements/requirements-rtd.txt
@@ -8,9 +8,9 @@ networkx
 jax
 optax
 torch
-sphinx==4.3.2
+sphinx>=4.3.2
 ipykernel
-furo==2022.4.7
+furo>=2022.4.7
 sphinx-copybutton
 nbsphinx
 myst-parser
