--- a/requirements/requirements-dev.txt
+++ b/requirements/requirements-dev.txt
@@ -1,13 +1,13 @@
-mypy==0.982
-pytest==6.2.4
+mypy>=0.982
+pytest>=6.2.4
 pytest-cov
 pytest-benchmark
 pytest-xdist
-black==22.3.0
+black>=22.3.0
 sphinx>=4.0
 pytest-lazy-fixture
-pylint==2.11.1
-numpy==1.21.5
+pylint>=2.11.1
+numpy>=1.21.5
 furo
 sphinx-copybutton
 nbsphinx
